# kninyecs

./: FINDINGS.md  MANIFEST.in  README.md  pyproject.toml
src/kninyecs/: __main__.py
src/kninyecs/assets/: atlas.json
